# faststream

./: .env  README.md  asyncapi.json  config.py  pyproject.toml
backend/: context.py  exchange.py  handler.py  main.py  pub.py
test/: test_main.py
